# finalProjectBdg

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CHANGES_SUMMARY.txt  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.fast  NGINX_QUICK_REF.md  NGINX_SETUP.md  PROJECT_GUIDE.md  QUICK_START.md  README.md  ansible-ping.sh  docker-compose.yml  entrypoint.sh  index.html  inventory.yml  nginx.conf  pyproject.toml  requirements.txt  setup.sh  test_nginx_setup.py  test_nginx_setup.sh  view_db.py
app/: __init__.py  main.py  models.py
terraform/: ec2 describe-vpcs --vpc-ids vpc-058ff6ed8065f995e --output table  main.tf
terraform-backend/: main.tf
tests/: __init__.py  test_main.py
