[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaming-stats-api"
version = "0.1.0"
description = "A FastAPI-based API for gaming statistics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "PyMySQL>=1.0.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]